# realtime-ai

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.en.md  README.md  app.py  config.py  pyproject.toml  requirements.txt  session.py
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
services/asr/: __init__.py  azure_asr.py  base.py  funasr_asr.py
services/llm/: base.py  openai_llm.py
services/tts/: __init__.py  azure_tts.py  base.py  cosyvoice_tts.py  minimax_tts.py
tests/: test_config.py
tests/services/: test_asr_init.py
utils/: audio.py  text.py
websocket/: handler.py  pipeline.py
